<resources>
    <string name="app_name">Transistor</string>
    <string name="app_version_name" translatable="false">\"Modern Love\"</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="dialog_edit_choose_station_image">Choose</string>
    <string name="dialog_edit_place_on_home_screen">Place on Home screen</string>
    <string name="dialog_edit_save_changes">Save Changes</string>
    <string name="dialog_edit_station_name">Station name</string>
    <string name="dialog_edit_stream_uri">Stream address</string>
    <string name="dialog_edit_title">Edit Station</string>
    <string name="dialog_edit_update_station">Update station</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_message_no_network">Connect to the Internet.</string>
    <string name="dialog_error_title_default">Error</string>
    <string name="dialog_error_title_no_network">Offline</string>
    <string name="dialog_find_station_button_add">Add</string>
    <string name="dialog_find_station_hint">Name or stream address</string>
    <string name="dialog_find_station_no_results">No results found.</string>
    <string name="dialog_find_station_title">Find Station</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_generic_details_default">No details available</string>
    <string name="dialog_opml_import_button_okay">Import</string>
    <string name="dialog_opml_import_details_button">Show details</string>
    <string name="dialog_opml_import_details_default">No details available</string>
    <string name="dialog_yes_no_message_default">Do you really want to do this?</string>
    <string name="dialog_yes_no_message_remove_station">Remove this station?</string>
    <string name="dialog_yes_no_message_update_collection">Look for changes?</string>
    <string name="dialog_yes_no_message_update_station_images">Download latest version of all station images?</string>
    <string name="dialog_yes_no_negative_button_add_up_next">Add to \'Up Next\'</string>
    <string name="dialog_yes_no_negative_button_cancel">Cancel</string>
    <string name="dialog_yes_no_negative_button_default">No</string>
    <string name="dialog_yes_no_positive_button_add_up_next">Start Now</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_delete_downloads">Delete All</string>
    <string name="dialog_yes_no_positive_button_non_wifi_download">Download anyway</string>
    <string name="dialog_yes_no_positive_button_remove_station">Remove</string>
    <string name="dialog_yes_no_positive_button_update_collection">Update</string>
    <string name="dialog_yes_no_positive_button_update_covers">Update</string>
    <string name="dialog_yes_no_positive_button_vpn_download">Download anyway</string>
    <string name="dialog_yes_no_title_default">Decide</string>
    <string name="menu_update">Update station</string>
    <string name="toastmessage_collection_update_not_necessary">Collection of stations is up-to-date.</string>
    <string name="toastmessage_error_download_error">Download error</string>
    <string name="toastmessage_error_missing_storage_permission">Grant \"Read Storage\" permission to open this file.</string>
    <string name="toastmessage_error_no_station_matches_search">Unable to find a station that matches your search.</string>
    <string name="toastmessage_error_no_station_found">Unable to start playback. Please add a radio station first.</string>
    <string name="toastmessage_error_restart_playback_failed">Unable to restart playback.</string>
    <string name="toastmessage_install_file_helper">Please install a file manager.</string>
    <string name="toastmessage_save_m3u">Saving radio stations as M3U…</string>
    <string name="toastmessage_station_duplicate">Duplicate station.</string>
    <string name="toastmessage_station_not_valid">Station is not valid.</string>
    <string name="toastmessage_theme_day">Switching to \'Day mode\' (long press detected)</string>
    <string name="toastmessage_theme_follow_system">Switching to \'Follow System Setting mode\' (long press detected)</string>
    <string name="toastmessage_theme_night">Switching to \'Night mode\' (long press detected)</string>
    <string name="toastmessage_updating_collection">Updating collection of stations.</string>
    <string name="toastmessage_updating_station">Updating station…</string>
    <string name="toastmessage_updating_station_images">Updating station images.</string>
    <string name="station_list_button_add_new_station">Add new station</string>
    <string name="station_list_button_settings">Settings</string>
    <string name="notification_now_playing_channel_name">Playback Controls</string>
    <string name="notification_now_playing_channel_description">Playback controls, station name and image.</string>
    <string name="notification_play">Play</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_skip_to_previous">Previous</string>
    <string name="notification_skip_to_next">Next</string>
    <string name="pref_about_title">About</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="pref_delete_all_title">Delete Downloads</string>
    <string name="pref_edit_station_summary_disabled">Editing of station information disabled.</string>
    <string name="pref_edit_station_summary_enabled">Editing of station information enabled. Use long press to enter edit mode.</string>
    <string name="pref_edit_station_title">Edit Stations</string>
    <string name="pref_edit_station_stream_summary_enabled">Editing of streaming links enabled. Make sure to enter a correct stream address.</string>
    <string name="pref_edit_station_stream_summary_disabled">Editing of streaming links disabled. </string>
    <string name="pref_edit_station_stream_title">Edit Streaming Links</string>
    <string name="pref_general_title">General</string>
    <string name="pref_handle_audio_focus_title">Handle Audio Focus</string>
    <string name="pref_handle_audio_focus_summary">Stop playback when other app starts playback or phone call is started</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_m3u_export_summary">Save your radio stations to an M3U playlist file that can be imported into other players.</string>
    <string name="pref_m3u_export_title">Export M3U</string>
    <string name="pref_report_issue_summary">Report bugs and suggest improvements on GitHub.</string>
    <string name="pref_report_issue_title">Report Issue</string>
    <string name="pref_theme_selection_mode_dark">Dark mode</string>
    <string name="pref_theme_selection_mode_device_default">Same as device</string>
    <string name="pref_theme_selection_mode_light">Light mode</string>
    <string name="pref_theme_selection_summary">Current theme:</string>
    <string name="pref_theme_selection_title">App Theme</string>
    <string name="pref_update_collection_summary">Look for updated audio streams and new station images.</string>
    <string name="pref_update_collection_title">Update Stations</string>
    <string name="pref_update_station_images_summary">Download latest version of all station images.</string>
    <string name="pref_update_station_images_title">Update Station Images</string>
    <string name="descr_app_icon">App icon depicting an old radio</string>
    <string name="descr_card_playback_indicator">Playback progress</string>
    <string name="descr_card_settings_button">Settings</string>
    <string name="descr_card_small_download_button">Download</string>
    <string name="descr_card_small_play_button">Play/stop</string>
    <string name="descr_card_small_edit_button">Edit</string>
    <string name="descr_card_starred_station">Starred station</string>
    <string name="descr_card_station_image">Station image</string>
    <string name="descr_card_station_image_change">Change station image</string>
    <string name="descr_dialog_edit_place_on_home_screen_icon">Place on Home screen</string>
    <string name="descr_dialog_edit_station_image">Station image</string>
    <string name="descr_dialog_edit_update_icon">Update</string>
    <string name="descr_expanded_player_sleep_timer_cancel_button">Cancel sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_remaining_time">Time remaining on sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_start_button">Start sleep timer</string>
    <string name="descr_player_station_image">Station image</string>
    <string name="descr_player_playback_button">Play/pause</string>
    <string name="onboarding_app_description">Radio App</string>
    <string name="onboarding_app_get_started">Get started</string>
    <string name="onboarding_app_import_running">Importing your stations…</string>
    <string name="onboarding_app_rodriguez_quote_1" translatable="false">It started out with butterflies</string>
    <string name="onboarding_app_rodriguez_quote_2" translatable="false">On a velvet afternoon</string>
    <string name="player_sheet_p_no_data" translatable="false">-</string>
    <string name="sample_text_station_metadata" translatable="false">David Bowie - The Man Who Sold The World</string>
    <string name="sample_text_station_name" translatable="false">Byte FM</string>
    <string name="sample_text_steam_url" translatable="false">http://bytefm.cast.addradio.de/bytefm/main/mid/stream</string>
    <string name="sample_text_sleep_timer_remaining_time" translatable="false">00:00</string>
    <string name="shortcut_last_station_short_label">Last station</string>
    <string name="shortcut_last_station_long_label">Play last station</string>
    <string name="shortcut_last_station_disabled_message">Shortcut for playback of last station disabled.</string>
    <string name="menu_icon">Change icon</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_shortcut">Place on Home screen</string>
    <string name="descr_station_options_button">Options</string>
    <string name="descr_station_name_example">Example FM</string>
    <string name="descr_station_metadata_example">Artist - Title</string>
    <string name="descr_station_stream_loading">Loading stream …</string>
    <string name="descr_playback_button_play">Play</string>
    <string name="descr_playback_button_stop">Stop</string>
    <string name="descr_playback_indicator">Playing station</string>
    <string name="descr_timer_icon">Sleep timer</string>
    <string name="descr_player_sheet_button_minimize">Hide station details</string>
    <string name="descr_player_sheet_content_copy_icon">Copy</string>
    <string name="descr_list_add_select_stream_dropdown">Select a stream</string>
    <string name="dialog_add_station_input_hint">Paste streaming link</string>
    <string name="dialog_add_station_message">Add new station</string>
    <string name="dialog_add_station_howto">You can add raw audio streams encoded in MP3, AAC and Ogg/Opus as well as streams encapsulated in PLS or M3U files. Alternatively you can add new stations by tapping on streaming links (.pls or .m3u) in your web browser.</string>
    <string name="dialog_rename_station_input_hint">Enter a new name</string>
    <string name="dialog_add_station_choose_stream_heading">Multiple streams found</string>
    <string name="dialog_add_station_choose_stream_message">Please select a stream</string>
    <string name="dialog_error_details_button_default">Show details</string>
    <string name="dialog_error_details_default">No details available</string>
</resources>