<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_icon"
        android:title="@string/menu_icon"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_rename"
        android:title="@string/menu_rename"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!-- <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:orderInCategory="100"
        app:showAsAction="never" /> -->

    <item
        android:id="@+id/menu_update"
        android:title="@string/menu_update"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_shortcut"
        android:title="@string/menu_shortcut"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
