<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_add_station_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_station_message"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <EditText
        android:id="@+id/dialog_add_station_input"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/dialog_add_station_input_hint" />

    <TextView
        android:id="@+id/dialog_add_station_howto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_add_station_howto"
        android:textAppearance="@android:style/TextAppearance.Small" />
</LinearLayout>