<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_choose_stream_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_add_station_choose_stream_heading"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_choose_stream_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_add_station_choose_stream_message"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintEnd_toEndOf="@+id/dialog_choose_stream_heading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dialog_choose_stream_heading"
        app:layout_constraintTop_toBottomOf="@+id/dialog_choose_stream_heading"
        tools:text="Please select a stream." />

    <Spinner
        android:id="@+id/dialog_choose_stream_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descr_list_add_select_stream_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_choose_stream_message"
        app:layout_constraintStart_toStartOf="@+id/dialog_choose_stream_message"
        app:layout_constraintTop_toBottomOf="@+id/dialog_choose_stream_message" />


</androidx.constraintlayout.widget.ConstraintLayout>